Supporting documents for your comment

--- a/app/views/interested/comment/v11/check-your-answers.html
+++ b/app/views/interested/comment/v11/check-your-answers.html
@@ -26,144 +26,177 @@
       </h1>
 
       <form method="post">
+        <div class="pins-panel">
+          {{ govukSummaryList({
+            rows: [
+              {
+                key: {
+                  text: 'Are you 18 or older?'
+                },
+                value: {
+                  html: data['age-declaration'] or 'Yes'
+                },
+                actions: {
+                  items: [
+                    {
+                      href: 'your-name',
+                      text: 'Change'
+                    }
+                  ]
+                }
+              },
+              {
+                key: {
+                  text: 'Name'
+                },
+                value: {
+                  html: (data['interested-first-name'] or 'Jan') + ' ' + (data['interested-last-name'] or 'Fisher') + '<br>Your name will not be shared'
+                },
+                actions: {
+                  items: [
+                    {
+                      href: 'your-name',
+                      text: 'Change'
+                    }
+                  ]
+                }
+              } if data['age-declaration'] != 'No',
+              {
+                key: {
+                  text: 'Email'
+                },
+                value: {
+                  html: data['email'] or 'sample@test.com'
+                },
+                actions: {
+                  items: [
+                    {
+                      href: 'your-email',
+                      text: 'Change'
+                    }
+                  ]
+                }
+              } if data['age-declaration'] != 'No',
+              {
+                key: {
+                  text: 'Do you want to tell us your address?'
+                },
+                value: {
+                  html: data['address-check']
+                },
+                actions: {
+                  items: [
+                    {
+                      href: 'address',
+                      text: 'Change'
+                    }
+                  ]
+                }
+              } if data['age-declaration'] != 'No',
+              {
+                key: {
+                  text: 'Address'
+                },
+                value: {
+                  text: '7 Aubrey House, Aubrey Road, Bristol BS3 3EX'
+                },
+                actions: {
+                  items: [
+                    {
+                      href: 'address',
+                      text: 'Change'
+                    }
+                  ]
+                }
+              } if data['address-check'] != 'No' and data['age-declaration'] != 'No',
+              {
+                key: {
+                  text: 'Do you want to tell us your postcode?'
+                },
+                value: {
+                  html: data['postcode-check'] or 'Yes'
+                },
+                actions: {
+                  items: [
+                    {
+                      href: 'address',
+                      text: 'Change'
+                    }
+                  ]
+                }
+              } if data['age-declaration'] == 'No',
+              {
+                key: {
+                  text: 'Postcode'
+                },
+                value: {
+                  html: data['postcode'] or 'BS3'
+                },
+                actions: {
+                  items: [
+                    {
+                      href: 'address',
+                      text: 'Change'
+                    }
+                  ]
+                }
+              } if data['postcode-check'] != 'No' and data['age-declaration'] == 'No',
+              {
+                key: {
+                  text: 'Comments'
+                },
+                value: {
+                  html: data['comments'] or 'Your comments go here etc etc'
+                },
+                actions: {
+                  items: [
+                    {
+                      href: 'add-comments',
+                      text: 'Change'
+                    }
+                  ]
+                }
+              },
+              {
+                key: {
+                  text: 'Documents to support your comment'
+                },
+                value: {
+                  html: data['documents-check'] or 'No'
+                },
+                actions: {
+                  items: [
+                    {
+                      href: 'documents-check',
+                      text: 'Change'
+                    }
+                  ]
+                }
+              },
+              {
+                key: {
+                  text: 'Supporting documents'
+                },
+                value: {
+                  html: data['supporting-documents'] or '<a href="#" class="govuk-body">Photos from Aubrey Road 2025.pdf</a>'
+                },
+                actions: {
+                  items: [
+                    {
+                      href: 'documents-upload',
+                      text: 'Change'
+                    }
+                  ]
+                }
+              } if data['documents-check'] == 'Yes'
 
-        {{ govukSummaryList({
-          rows: [
-            {
-              key: {
-                text: 'Are you 18 or older?'
-              },
-              value: {
-                html: data['age-declaration'] or 'Yes'
-              },
-              actions: {
-                items: [
-                  {
-                    href: 'your-name',
-                    text: 'Change'
-                  }
-                ]
-              }
-            },
-            {
-              key: {
-                text: 'Name'
-              },
-              value: {
-                html: (data['interested-first-name'] or 'Jan') + ' ' + (data['interested-last-name'] or 'Fisher') + '<br>Your name will not be shared'
-              },
-              actions: {
-                items: [
-                  {
-                    href: 'your-name',
-                    text: 'Change'
-                  }
-                ]
-              }
-            } if data['age-declaration'] != 'No',
-            {
-              key: {
-                text: 'Email'
-              },
-              value: {
-                html: data['email'] or 'sample@test.com'
-              },
-              actions: {
-                items: [
-                  {
-                    href: 'your-email',
-                    text: 'Change'
-                  }
-                ]
-              }
-            } if data['age-declaration'] != 'No',
-            {
-              key: {
-                text: 'Do you want to tell us your address?'
-              },
-              value: {
-                html: data['address-check']
-              },
-              actions: {
-                items: [
-                  {
-                    href: 'address',
-                    text: 'Change'
-                  }
-                ]
-              }
-            } if data['age-declaration'] != 'No',
-            {
-              key: {
-                text: 'Address'
-              },
-              value: {
-                text: '7 Aubrey House, Aubrey Road, Bristol BS3 3EX'
-              },
-              actions: {
-                items: [
-                  {
-                    href: 'address',
-                    text: 'Change'
-                  }
-                ]
-              }
-            } if data['address-check'] != 'No' and data['age-declaration'] != 'No',
-            {
-              key: {
-                text: 'Do you want to tell us your postcode?'
-              },
-              value: {
-                html: data['postcode-check'] or 'Yes'
-              },
-              actions: {
-                items: [
-                  {
-                    href: 'address',
-                    text: 'Change'
-                  }
-                ]
-              }
-            } if data['age-declaration'] == 'No',
-            {
-              key: {
-                text: 'Postcode'
-              },
-              value: {
-                html: data['postcode'] or 'BS3'
-              },
-              actions: {
-                items: [
-                  {
-                    href: 'address',
-                    text: 'Change'
-                  }
-                ]
-              }
-            } if data['postcode-check'] != 'No' and data['age-declaration'] == 'No',
-            {
-              key: {
-                text: 'Comments'
-              },
-              value: {
-                html: data['comments'] or 'Your comments go here etc etc'
-              },
-              actions: {
-                items: [
-                  {
-                    href: 'add-comments',
-                    text: 'Change'
-                  }
-                ]
-              }
-            }
+            ]
+          }) }}
 
-          ]
-        }) }}
-
-        {{ govukButton({
-          html: 'Submit comments'
-        }) }}
+          {{ govukButton({
+            html: 'Submit comments'
+          }) }}
+        </div>
 
       </form>
 
