--- a/app/assets/sass/pins/pins_tables.scss
+++ b/app/assets/sass/pins/pins_tables.scss
@@ -16,6 +16,11 @@
 	border-bottom: 0;
 }
 
+.pins-panel .govuk-summary-list__row:last-child,
+.pins-panel .govukTable:last-child {
+	border-bottom: none;
+}
+
 
 //
 // .pins-table-divider {
