--- a/app/views/appeal/before-you-start/aad/v3/application-not-found/application-not-found.html
+++ b/app/views/appeal/before-you-start/aad/v3/application-not-found/application-not-found.html
@@ -4,24 +4,53 @@
 
 {% block backLink %}{% endblock %}
 
-{% block questions %}
-  <h1 class="govuk-heading-l">
-    {{title}}
-  </h1>
 
-  <div class="govuk-button-group">
+{% block content %}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
 
-    {{ govukButton({
-      text: "Search another application number",
-      href: "application-ref"
-    }) }}
-  
-    <p class="govuk-body"><a class="govuk-link" href="../../../v19/planning-type">Continue without application number</a></p>
-  
-    </div>
+    <form method="post" novalidate onsubmit="handleSubmit(event)">
 
-  
+      <h1 class="govuk-heading-l">{{title}}</h1>
+
+      {{ govukRadios({
+        name: 'numberCheck',   
+        fieldset: {
+        legend: {
+          text: "Are you sure 1234567 is your application number?",
+          isPageHeading: true,
+          classes: "govuk-fieldset__legend--m"
+        }
+        },      
+        value: data.numberCheck, 
+        items: [
+          { value: "Yes", text: "Yes" },
+          { value: "No", text: "No" }
+        ]
+      }) }}
+
+      {{ govukButton({
+      text: "Continue"
+      }) }}
+
+    </form>
+
+    <script>
+      function handleSubmit(event) {
+      event.preventDefault();
+      const selectedValue = document.querySelector('input[name="numberCheck"]:checked').value;
+      if (selectedValue === "Yes") {
+        window.location.href = '../../../v19/planning-type';
+      } else {
+        window.location.href = 'application-ref';
+      }
+      }
+    </script>
+
+  </div>
+</div>
 {% endblock %}
+
 
 {# Override the default "Continue" button with nothing #}
 {% block buttons %}{% endblock %}
