--- a/app/views/appeal/before-you-start/aad/v3/not-eligible/not-eligible.html
+++ b/app/views/appeal/before-you-start/aad/v3/not-eligible/not-eligible.html
@@ -18,7 +18,7 @@
 
   {% from "govuk/components/button/macro.njk" import govukButton %}
 
-<p class="govuk-body"><a href="enforcement-notice">Start a new appeal</a></p>
+<p class="govuk-body"><a href="before-you-start">Start a new appeal</a></p>
   
 {% endblock %}
 
