--- a/app/views/appeal/before-you-start/aad/v3/partial-success/enforcement-notice.html
+++ b/app/views/appeal/before-you-start/aad/v3/partial-success/enforcement-notice.html
@@ -39,7 +39,7 @@
       if (selectedValue === "Yes") {
         window.location.href = 'existing-service';
       } else {
-        window.location.href = 'application-ref';
+        window.location.href = 'lpa';
       }
       }
     </script>
