updated aad index

--- a/app/views/appeal/before-you-start/aad/index.html
+++ b/app/views/appeal/before-you-start/aad/index.html
@@ -20,7 +20,7 @@
       <a href="v3/application-not-found/before-you-start">Failure: application not found</a>
     </li>
     <li>
-      <a href="v3/invalid-ref-error/ref-error">Failure: invalid reference number</a>
+      <a href="v3/invalid-ref-error/ref-error">Error: invalid reference number</a>
     </li>
   </ul>
 
