grounds and facts content change

--- a/app/views/appeal/enforcement/v2/task-list__prepare.html
+++ b/app/views/appeal/enforcement/v2/task-list__prepare.html
@@ -57,11 +57,8 @@
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
         <a class="govuk-link govuk-task-list__link" href="prepare-appeal/grounds" aria-describedby="your-application-hint your-application-status">
-          Grounds and facts
+          Grounds of appeal and supporting facts
         </a>
-        <div id="your-application-hint" class="govuk-task-list__hint">
-          WHAT HINT TEXT FOR HERE
-        </div>
       </div>
       <div class="govuk-task-list__status" id="your-application-status">
         {% if data['your-application-complete'] %}
