--- a/app/views/appeal/enforcement/v2/task-list__upload.html
+++ b/app/views/appeal/enforcement/v2/task-list__upload.html
@@ -6,11 +6,8 @@
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
         <a class="govuk-link govuk-task-list__link" href="upload-documents/planning-obligation-check" aria-describedby="application-documents-hint application-documents-status">
-          Upload documents
+          Planning obligation and costs application
         </a>
-        <div id="application-documents-hint" class="govuk-task-list__hint">
-          Planning obligation and other documents
-        </div>
       </div>
       <div class="govuk-task-list__status" id="application-documents-status">
         {% if data['application-complete'] %}
